--- a/WebContent/WEB-INF/sidebar.xhtml
+++ b/WebContent/WEB-INF/sidebar.xhtml
@@ -12,7 +12,7 @@
                 <ui:fragment rendered="#{guestPreferences.profileMode == 'inline'}">
                     <div class="user-profile">
                         <a id="sidebar-profile-button" href="#">
-                            <p:graphicImage name="images/avatar.jpg" library="california-layout" />
+                            <p:graphicImage name="images/avatar.png" library="california-layout" />
                             <span class="sidebar-profile-name">Iñigo Fernandez</span>
                             <span class="sidebar-profile-role">Administrator</span>
                         </a>
